# Web-game

./: .gitignore  .pdm-python  README.md  docker-compose.yaml  pyproject.toml  run_server.bat
database_model/: add_data_test.py
database_model/model/: database_context.py  table_actions.py  table_user.py
src/backend/: main.py  run_pytest.bat  run_server.bat
src/backend/test_backend/: conftest.py  test_main.py  test_request.py
src/frontend/: test_bootstrap_version.html
